--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -5,23 +5,20 @@
             <h1><a href="<%= root_path %>">Apostell</a></h1>
             <nav class="links">
               <ul>
-            <li><a href="<%= flights_path %>">All Trips</a></li>
-            <li><a href="<%= created_flights_path(user_id: current_user.id) %>">My Trips</a></li>
-            <li><a href="<%= requests_path %>">All Requests</a></li>
-            <li><a href="<%= created_requests_path(user_id: current_user.id) %>">My Requests</a></li>
-            <li><a href="<%= conversations_path %>">Messages</a></li>
+            <li><a href="<%= flights_path %>">Trips</a></li>
+            <li><a href="<%= requests_path %>">Requests</a></li>
+            <li><a href="<%= conversations_path %>">Inbox</a></li>
             <li><a href="<%= users_path %>">Connections</a></li>
-            <li><a href="<%= "#" %>">Profile</a></li>
               </ul>
             </nav>
             <nav class="main">
               <ul>
-                <li class="search">
+          <!--       <li class="search">
                   <a class="fa-search" href="#search">Search</a>
                   <form id="search" method="get" action="#">
                     <input type="text" name="query" placeholder="Search" />
                   </form>
-                </li>
+                </li> -->
                 <li class="menu_button">
                   <a class="fa-bars" href="#menu">Menu</a>
                 </li>
@@ -33,39 +30,22 @@
           <section id="menu" hidden>
 
             <!-- Search -->
-              <section>
+<!--               <section>
                 <form class="search" method="get" action="#">
                   <input type="text" name="query" placeholder="Search" />
                 </form>
-              </section>
+              </section> -->
 
             <!-- Links -->
               <section>
                 <ul class="links">
-                  <li>
-                    <a href="#">
-                      <h3>Lorem ipsum</h3>
-                      <p>Feugiat tempus veroeros dolor</p>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <h3>Dolor sit amet</h3>
-                      <p>Sed vitae justo condimentum</p>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <h3>Feugiat veroeros</h3>
-                      <p>Phasellus sed ultricies mi congue</p>
-                    </a>
-                  </li>
-                  <li>
-                    <a href="#">
-                      <h3>Etiam sed consequat</h3>
-                      <p>Porta lectus amet ultricies</p>
-                    </a>
-                  </li>
+            <li><a href="<%= flights_path %>"><h3>All Trips</h3></a></li>
+            <li><a href="<%= created_flights_path(user_id: current_user.id) %>"><h3>My Trips</h3></a></li>
+            <li><a href="<%= requests_path %>"><h3>All Requests</h3></a></li>
+            <li><a href="<%= created_requests_path(user_id: current_user.id) %>"><h3>My Requests</h3></a></li>
+            <li><a href="<%= conversations_path %>"><h3>Inbox</h3></a></li>
+            <li><a href="<%= users_path %>"><h3>Connections</h3></a></li>
+            <li><a href="<%= "#" %>"><h3>Profile</h3></a></li>
                 </ul>
               </section>
 
