--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -37,9 +37,9 @@
             </div>
             <div class="panel-body scrollable">
               <ul class="chat">
+                <% if @messages.count > 0 %>
                 <% @messages.each do |message| %>
-                <% if message.body %>
-                <% user = User.find(message.user_id) %>
+                <% user = User.find(message["user_id"]) %>
                 <% if current_user != user %>
                 <li class="left clearfix"><span class="chat-img pull-left">
                   <img src="http://placehold.it/50/55C1E7/fff&text=U" alt="User Avatar" class="img-circle" />
